; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/s390/kernel/extr_time.c_etr_compare_network.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/s390/kernel/extr_time.c_etr_compare_network.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.etr_aib = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.etr_aib*, %struct.etr_aib*)* @etr_compare_network to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @etr_compare_network(%struct.etr_aib* %0, %struct.etr_aib* %1) #0 {
  %3 = alloca %struct.etr_aib*, align 8
  %4 = alloca %struct.etr_aib*, align 8
  store %struct.etr_aib* %0, %struct.etr_aib** %3, align 8
  store %struct.etr_aib* %1, %struct.etr_aib** %4, align 8
  %5 = load %struct.etr_aib*, %struct.etr_aib** %3, align 8
  %6 = getelementptr inbounds %struct.etr_aib, %struct.etr_aib* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.etr_aib*, %struct.etr_aib** %4, align 8
  %10 = getelementptr inbounds %struct.etr_aib, %struct.etr_aib* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp eq i64 %8, %12
  %14 = zext i1 %13 to i32
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
